fea: Use win32yank.exe to sync clipboard

--- a/.chezmoidata/software_config.yaml
+++ b/.chezmoidata/software_config.yaml
@@ -22,3 +22,9 @@ software:
         platforms: [windows, linux, darwin]
       - target: .config/git/config
         platforms: [linux, darwin]
+  wezterm:
+    paths:
+      - target: .config/wezterm
+        platforms: [linux, darwin]
+      - target: AppData/Local/wezterm
+        platforms: [windows]
