style: universal LF fea: add defence statment chore: add git conf fix: init.lua.tmpl.windows defence stament error

--- a/.chezmoidata/software_config.yaml
+++ b/.chezmoidata/software_config.yaml
@@ -19,8 +19,8 @@ software:
   git:
     paths:
       - target: .gitconfig
-        platforms: [windows, linux, darwin]
-      - target: .config/git/config
+        platforms: [windows]
+      - target: .config/git
         platforms: [linux, darwin]
   wezterm:
     paths:
